Add 5 volumns of books by Prudnikov on integrals and series

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: git AT github.com:chenle02/SPDEs-Bib.git
-% Commit: 97cd8fef9bb0883705245e1ee0bb79bff3baf944
+% Commit: d482adcc7bb3c9f1c26f5c17cb038e5e2d8db59b
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
 % Date:   2023-12-14
@@ -8241,21 +8241,6 @@
 }
 @article{borodin.corwin.ea:15:spectral,
   author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
-  title         = {Spectral theory for interacting particle systems solvable by coordinate {B}ethe ansatz},
-  journal       = {Comm. Math. Phys.},
-  fjournal      = {Communications in Mathematical Physics},
-  volume        = {339},
-  year          = {2015},
-  number        = {3},
-  pages         = {1167--1245},
-  issn          = {0010-3616},
-  mrclass       = {82B23 (81R12)},
-  mrnumber      = {3385995},
-  doi           = {10.1007/s00220-015-2424-7},
-  url           = {https://doi.org/10.1007/s00220-015-2424-7}
-}
-@article{borodin.corwin.ea:15:spectral*1,
-  author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
   title         = {Spectral theory for the {$q$}-{B}oson particle system},
   journal       = {Compos. Math.},
   fjournal      = {Compositio Mathematica},
@@ -8268,6 +8253,21 @@
   mrnumber      = {3305308},
   doi           = {10.1112/S0010437X14007532},
   url           = {https://doi.org/10.1112/S0010437X14007532}
+}
+@article{borodin.corwin.ea:15:spectral*1,
+  author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
+  title         = {Spectral theory for interacting particle systems solvable by coordinate {B}ethe ansatz},
+  journal       = {Comm. Math. Phys.},
+  fjournal      = {Communications in Mathematical Physics},
+  volume        = {339},
+  year          = {2015},
+  number        = {3},
+  pages         = {1167--1245},
+  issn          = {0010-3616},
+  mrclass       = {82B23 (81R12)},
+  mrnumber      = {3385995},
+  doi           = {10.1007/s00220-015-2424-7},
+  url           = {https://doi.org/10.1007/s00220-015-2424-7}
 }
 @article{borodin.corwin.ea:16:observables,
   author        = {Borodin, Alexei and Corwin, Ivan and Gorin, Vadim and Shakirov, Shamil},
@@ -11890,6 +11890,18 @@
 }
 @incollection{bourgain:02:on*1,
   author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
+}
+@incollection{bourgain:02:on*2,
+  author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential},
   note          = {Dedicated to the memory of Thomas H. Wolff},
   journal       = {J. Anal. Math.},
@@ -11903,18 +11915,6 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
-}
-@incollection{bourgain:02:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
 }
 @incollection{bourgain:02:on*3,
   author        = {Bourgain, J.},
@@ -12970,23 +12970,7 @@
   mrnumber      = {3329846},
   mrreviewer    = {Brett\ D.\ Wick}
 }
-@incollection{bourgain:14:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {2116},
-  pages         = {71--83},
-  publisher     = {Springer, Cham},
-  year          = {2014},
-  isbn          = {978-3-319-09476-2; 978-3-319-09477-9},
-  mrclass       = {35P15 (35J10 35P05 47B39 81Q12 82B20 82B44)},
-  mrnumber      = {3364680},
-  mrreviewer    = {Michael\ A.\ Perelmuter},
-  doi           = {10.1007/978-3-319-09477-9\_6},
-  url           = {https://doi.org/10.1007/978-3-319-09477-9_6}
-}
-@article{bourgain:14:on*2,
+@article{bourgain:14:on*1,
   author        = {Bourgain, Jean},
   title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
   journal       = {Israel J. Math.},
@@ -13001,6 +12985,22 @@
   mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
   doi           = {10.1007/s11856-014-1059-2},
   url           = {https://doi.org/10.1007/s11856-014-1059-2}
+}
+@incollection{bourgain:14:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {2116},
+  pages         = {71--83},
+  publisher     = {Springer, Cham},
+  year          = {2014},
+  isbn          = {978-3-319-09476-2; 978-3-319-09477-9},
+  mrclass       = {35P15 (35J10 35P05 47B39 81Q12 82B20 82B44)},
+  mrnumber      = {3364680},
+  mrreviewer    = {Michael\ A.\ Perelmuter},
+  doi           = {10.1007/978-3-319-09477-9\_6},
+  url           = {https://doi.org/10.1007/978-3-319-09477-9_6}
 }
 @incollection{bourgain:14:on*3,
   author        = {Bourgain, Jean},
@@ -13800,20 +13800,7 @@
   mrreviewer    = {James\ Hagler},
   url           = {http://www.numdam.org/item?id=CM_1981__43_1_133_0}
 }
-@book{bourgain:81:new,
-  author        = {Bourgain, Jean},
-  title         = {New classes of {${\cal L}\sp{p}$}-spaces},
-  series        = {Lecture Notes in Mathematics},
-  volume        = {889},
-  publisher     = {Springer-Verlag, Berlin-New York},
-  year          = {1981},
-  pages         = {v+143},
-  isbn          = {3-540-11156-5},
-  mrclass       = {46B20},
-  mrnumber      = {639014},
-  mrreviewer    = {Hermann\ K\"{o}nig}
-}
-@article{bourgain:81:new*1,
+@article{bourgain:81:new,
   author        = {Bourgain, J.},
   title         = {A new class of {${\cal L}\sp{1}$}-spaces},
   journal       = {Israel J. Math.},
@@ -13828,6 +13815,19 @@
   mrreviewer    = {G.\ Schechtman},
   doi           = {10.1007/BF02762857},
   url           = {https://doi.org/10.1007/BF02762857}
+}
+@book{bourgain:81:new*1,
+  author        = {Bourgain, Jean},
+  title         = {New classes of {${\cal L}\sp{p}$}-spaces},
+  series        = {Lecture Notes in Mathematics},
+  volume        = {889},
+  publisher     = {Springer-Verlag, Berlin-New York},
+  year          = {1981},
+  pages         = {v+143},
+  isbn          = {3-540-11156-5},
+  mrclass       = {46B20},
+  mrnumber      = {639014},
+  mrreviewer    = {Hermann\ K\"{o}nig}
 }
 @article{bourgain:81:noncompleteness,
   author        = {Bourgain, Jean},
@@ -14677,22 +14677,6 @@
 }
 @article{bourgain:86:on*1,
   author        = {Bourgain, J.},
-  title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {54},
-  year          = {1986},
-  number        = {2},
-  pages         = {227--241},
-  issn          = {0021-2172},
-  mrclass       = {47A65},
-  mrnumber      = {852479},
-  mrreviewer    = {Vern\ Paulsen},
-  doi           = {10.1007/BF02764943},
-  url           = {https://doi.org/10.1007/BF02764943}
-}
-@article{bourgain:86:on*2,
-  author        = {Bourgain, J.},
   title         = {On the {$L^p$}-bounds for maximal functions associated to convex bodies in {${\bf R}^n$}},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14706,6 +14690,22 @@
   mrreviewer    = {Roger\ L.\ Jones},
   doi           = {10.1007/BF02764955},
   url           = {https://doi.org/10.1007/BF02764955}
+}
+@article{bourgain:86:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {54},
+  year          = {1986},
+  number        = {2},
+  pages         = {227--241},
+  issn          = {0021-2172},
+  mrclass       = {47A65},
+  mrnumber      = {852479},
+  mrreviewer    = {Vern\ Paulsen},
+  doi           = {10.1007/BF02764943},
+  url           = {https://doi.org/10.1007/BF02764943}
 }
 @article{bourgain:86:on*3,
   author        = {Bourgain, J.},
@@ -14857,7 +14857,23 @@
   mrnumber      = {934289},
   mrreviewer    = {Alberto\ Torchinsky}
 }
-@article{bourgain:87:on,
+@incollection{bourgain:87:on,
+  author        = {Bourgain, J.},
+  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
+  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1267},
+  pages         = {168--176},
+  publisher     = {Springer, Berlin},
+  year          = {1987},
+  isbn          = {3-540-18103-2},
+  mrclass       = {42B25 (42B15)},
+  mrnumber      = {907693},
+  mrreviewer    = {Roger\ L.\ Jones},
+  doi           = {10.1007/BFb0078144},
+  url           = {https://doi.org/10.1007/BFb0078144}
+}
+@article{bourgain:87:on*1,
   author        = {Bourgain, J.},
   title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
   journal       = {Invent. Math.},
@@ -14873,7 +14889,7 @@
   doi           = {10.1007/BF01389238},
   url           = {https://doi.org/10.1007/BF01389238}
 }
-@incollection{bourgain:87:on*1,
+@incollection{bourgain:87:on*2,
   author        = {Bourgain, J.},
   title         = {On lattice packing of convex symmetric sets in {${\bf R}^n$}},
   booktitle     = {Geometrical aspects of functional analysis (1985/86)},
@@ -14888,22 +14904,6 @@
   mrreviewer    = {J.\ M.\ Wills},
   doi           = {10.1007/BFb0078132},
   url           = {https://doi.org/10.1007/BFb0078132}
-}
-@incollection{bourgain:87:on*2,
-  author        = {Bourgain, J.},
-  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
-  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1267},
-  pages         = {168--176},
-  publisher     = {Springer, Berlin},
-  year          = {1987},
-  isbn          = {3-540-18103-2},
-  mrclass       = {42B25 (42B15)},
-  mrnumber      = {907693},
-  mrreviewer    = {Roger\ L.\ Jones},
-  doi           = {10.1007/BFb0078144},
-  url           = {https://doi.org/10.1007/BFb0078144}
 }
 @article{bourgain:87:on*3,
   author        = {Bourgain, Jean},
@@ -15018,6 +15018,22 @@
 }
 @article{bourgain:88:on,
   author        = {Bourgain, J.},
+  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {73--84},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937582},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776302},
+  url           = {https://doi.org/10.1007/BF02776302}
+}
+@article{bourgain:88:on*1,
+  author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -15032,7 +15048,7 @@
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
 }
-@incollection{bourgain:88:on*1,
+@incollection{bourgain:88:on*2,
   author        = {Bourgain, J.},
   title         = {On finite-dimensional homogeneous {B}anach spaces},
   booktitle     = {Geometric aspects of functional analysis (1986/87)},
@@ -15047,22 +15063,6 @@
   mrreviewer    = {T.\ Figiel},
   doi           = {10.1007/BFb0081744},
   url           = {https://doi.org/10.1007/BFb0081744}
-}
-@article{bourgain:88:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {73--84},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937582},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776302},
-  url           = {https://doi.org/10.1007/BF02776302}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -15330,22 +15330,6 @@
   url           = {https://doi.org/10.1007/BF01895639}
 }
 @incollection{bourgain:91:on,
-  author        = {Bourgain, Jean},
-  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
-  booktitle     = {Geometric aspects of functional analysis (1989--90)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1469},
-  pages         = {179--191},
-  publisher     = {Springer, Berlin},
-  year          = {1991},
-  isbn          = {3-540-54024-5},
-  mrclass       = {42B15 (42B25 46E30)},
-  mrnumber      = {1122623},
-  mrreviewer    = {Peter\ I.\ Lizorkin},
-  doi           = {10.1007/BFb0089225},
-  url           = {https://doi.org/10.1007/BFb0089225}
-}
-@incollection{bourgain:91:on*1,
   author        = {Bourgain, J.},
   title         = {On the distribution of polynomials on high-dimensional convex sets},
   booktitle     = {Geometric aspects of functional analysis (1989--90)},
@@ -15360,6 +15344,22 @@
   mrreviewer    = {Wolfgang\ Lusky},
   doi           = {10.1007/BFb0089219},
   url           = {https://doi.org/10.1007/BFb0089219}
+}
+@incollection{bourgain:91:on*1,
+  author        = {Bourgain, Jean},
+  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
+  booktitle     = {Geometric aspects of functional analysis (1989--90)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1469},
+  pages         = {179--191},
+  publisher     = {Springer, Berlin},
+  year          = {1991},
+  isbn          = {3-540-54024-5},
+  mrclass       = {42B15 (42B25 46E30)},
+  mrnumber      = {1122623},
+  mrreviewer    = {Peter\ I.\ Lizorkin},
+  doi           = {10.1007/BFb0089225},
+  url           = {https://doi.org/10.1007/BFb0089225}
 }
 @article{bourgain:91:on*2,
   author        = {Bourgain, J.},
@@ -16130,6 +16130,21 @@
 }
 @article{bourgain:99:on,
   author        = {Bourgain, J.},
+  title         = {On growth of {S}obolev norms in linear {S}chr\"{o}dinger equations with smooth time dependent potential},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {77},
+  year          = {1999},
+  pages         = {315--348},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {35J10 (35B10 35K40 47N20)},
+  mrnumber      = {1753490},
+  mrreviewer    = {C.\ Eugene\ Wayne},
+  doi           = {10.1007/BF02791265},
+  url           = {https://doi.org/10.1007/BF02791265}
+}
+@article{bourgain:99:on*1,
+  author        = {Bourgain, J.},
   title         = {On the dimension of {K}akeya sets and related maximal inequalities},
   journal       = {Geom. Funct. Anal.},
   fjournal      = {Geometric and Functional Analysis},
@@ -16143,21 +16158,6 @@
   mrreviewer    = {Andreas\ Seeger},
   doi           = {10.1007/s000390050087},
   url           = {https://doi.org/10.1007/s000390050087}
-}
-@article{bourgain:99:on*1,
-  author        = {Bourgain, J.},
-  title         = {On growth of {S}obolev norms in linear {S}chr\"{o}dinger equations with smooth time dependent potential},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {77},
-  year          = {1999},
-  pages         = {315--348},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {35J10 (35B10 35K40 47N20)},
-  mrnumber      = {1753490},
-  mrreviewer    = {C.\ Eugene\ Wayne},
-  doi           = {10.1007/BF02791265},
-  url           = {https://doi.org/10.1007/BF02791265}
 }
 @article{bourgain:99:on*2,
   author        = {Bourgain, J.},
@@ -59588,6 +59588,64 @@
   mrreviewer    = {M. M\'{e}tivier},
   url           = {http://links.jstor.org/sici?sici=0091-1798(198505)13:2<519:VEDBS>2.0.CO;2-3&origin=MSN}
 }
+@book{prudnikov.brychkov.ea:86:integrals,
+  author        = {Prudnikov, A. P. and Brychkov, Yu. A. and Marichev, O. I.},
+  title         = {Integrals and series. {V}ol. 1},
+  note          = {Elementary functions, Translated from the Russian and with a preface by N. M. Queen},
+  publisher     = {Gordon \& Breach Science Publishers, New York},
+  year          = {1986},
+  pages         = {798},
+  isbn          = {2-88124-097-6},
+  mrclass       = {00A22 (33-00)},
+  mrnumber      = {874986}
+}
+@book{prudnikov.brychkov.ea:88:integrals,
+  author        = {Prudnikov, A. P. and Brychkov, Yu. A. and Marichev, O. I.},
+  title         = {Integrals and series. {V}ol. 2},
+  edition       = {Second},
+  note          = {Special functions, Translated from the Russian by N. M. Queen},
+  publisher     = {Gordon \& Breach Science Publishers, New York},
+  year          = {1988},
+  pages         = {750},
+  isbn          = {2-88124-090-9},
+  mrclass       = {00A22 (33-00)},
+  mrnumber      = {950173}
+}
+@book{prudnikov.brychkov.ea:90:integrals,
+  author        = {Prudnikov, A. P. and Brychkov, Yu. A. and Marichev, O. I.},
+  title         = {Integrals and series. {V}ol. 3},
+  note          = {More special functions, Translated from the Russian by G. G. Gould},
+  publisher     = {Gordon and Breach Science Publishers, New York},
+  year          = {1990},
+  pages         = {800},
+  isbn          = {2-88124-682-6},
+  mrclass       = {33-00 (00A20 26-00)},
+  mrnumber      = {1054647}
+}
+@book{prudnikov.brychkov.ea:92:integrals,
+  author        = {Prudnikov, A. P. and Brychkov, Yu. A. and Marichev, O. I.},
+  title         = {Integrals and series. {V}ol. 4},
+  note          = {Direct Laplace transforms},
+  publisher     = {Gordon and Breach Science Publishers, New York},
+  year          = {1992},
+  pages         = {xx+619},
+  isbn          = {2-88124-837-3},
+  mrclass       = {44A10 (33-00 44-00 44A20 44A35)},
+  mrnumber      = {1162979},
+  mrreviewer    = {J.\ M. H. Peters}
+}
+@book{prudnikov.brychkov.ea:92:integrals*1,
+  author        = {Prudnikov, A. P. and Brychkov, Yu. A. and Marichev, O. I.},
+  title         = {Integrals and series. {V}ol. 5},
+  note          = {Inverse Laplace transforms},
+  publisher     = {Gordon and Breach Science Publishers, New York},
+  year          = {1992},
+  pages         = {xx+595},
+  isbn          = {2-88124-838-1},
+  mrclass       = {44-00 (00A20 26-00 33-00 44A35)},
+  mrnumber      = {1162980},
+  mrreviewer    = {J.\ M. H. Peters}
+}
 @book{pruss:93:evolutionary,
   author        = {Pr\"{u}ss, Jan},
   title         = {Evolutionary integral equations and applications},
@@ -64908,21 +64966,6 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -64936,6 +64979,21 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
