--- a/Build_docs/bib_files/bourgain:87:on*2.bib
+++ b/Build_docs/bib_files/bourgain:87:on*2.bib
@@ -1,16 +1,16 @@
 @incollection{bourgain:87:on*2,
  author = {Bourgain, J.},
  booktitle = {Geometrical aspects of functional analysis (1985/86)},
- doi = {10.1007/BFb0078144},
+ doi = {10.1007/BFb0078132},
  isbn = {3-540-18103-2},
- mrclass = {42B25 (42B15)},
- mrnumber = {907693},
- mrreviewer = {Roger\ L.\ Jones},
- pages = {168--176},
+ mrclass = {52A43 (11H31 52A45)},
+ mrnumber = {907681},
+ mrreviewer = {J.\ M.\ Wills},
+ pages = {5--12},
  publisher = {Springer, Berlin},
  series = {Lecture Notes in Math.},
- title = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
- url = {https://doi.org/10.1007/BFb0078144},
+ title = {On lattice packing of convex symmetric sets in {${\bf R}^n$}},
+ url = {https://doi.org/10.1007/BFb0078132},
  volume = {1267},
  year = {1987}
 }
