--- a/All.bib
+++ b/All.bib
@@ -6,10 +6,10 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: git AT github.com:chenle02/SPDEs-Bib.git
-% Commit: 6f00005d29b45804525882fe45f4fde666cb5ba5
+% Commit: a333591869015a35515800cb20482056b03a1bd1
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
-% Date:   2024-07-22
+% Date:   2024-07-23
 % ---------------------------
 
 
@@ -15758,6 +15758,21 @@
 }
 @article{bourgain:13:on*2,
   author        = {Bourgain, J.},
+  title         = {On the correlation of the {M}oebius function with rank-one systems},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {120},
+  year          = {2013},
+  pages         = {105--130},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {37A30 (11L20 11N37)},
+  mrnumber      = {3095150},
+  mrreviewer    = {Giulio\ Tiozzo},
+  doi           = {10.1007/s11854-013-0016-z},
+  url           = {https://doi.org/10.1007/s11854-013-0016-z}
+}
+@article{bourgain:13:on*3,
+  author        = {Bourgain, J.},
   title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -15771,21 +15786,6 @@
   mrreviewer    = {Gergely\ Harcos},
   doi           = {10.1007/s11856-013-0002-2},
   url           = {https://doi.org/10.1007/s11856-013-0002-2}
-}
-@article{bourgain:13:on*3,
-  author        = {Bourgain, J.},
-  title         = {On the correlation of the {M}oebius function with rank-one systems},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {120},
-  year          = {2013},
-  pages         = {105--130},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {37A30 (11L20 11N37)},
-  mrnumber      = {3095150},
-  mrreviewer    = {Giulio\ Tiozzo},
-  doi           = {10.1007/s11854-013-0016-z},
-  url           = {https://doi.org/10.1007/s11854-013-0016-z}
 }
 @article{bourgain:13:prescribing,
   author        = {Bourgain, Jean},
@@ -17925,23 +17925,7 @@
   doi           = {10.1007/BF02776302},
   url           = {https://doi.org/10.1007/BF02776302}
 }
-@incollection{bourgain:88:on*1,
-  author        = {Bourgain, J.},
-  title         = {On finite-dimensional homogeneous {B}anach spaces},
-  booktitle     = {Geometric aspects of functional analysis (1986/87)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1317},
-  pages         = {232--238},
-  publisher     = {Springer, Berlin},
-  year          = {1988},
-  isbn          = {3-540-19353-7},
-  mrclass       = {46B20},
-  mrnumber      = {950984},
-  mrreviewer    = {T.\ Figiel},
-  doi           = {10.1007/BFb0081744},
-  url           = {https://doi.org/10.1007/BFb0081744}
-}
-@article{bourgain:88:on*2,
+@article{bourgain:88:on*1,
   author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
@@ -17956,6 +17940,22 @@
   mrreviewer    = {Alberto\ de la Torre},
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
+}
+@incollection{bourgain:88:on*2,
+  author        = {Bourgain, J.},
+  title         = {On finite-dimensional homogeneous {B}anach spaces},
+  booktitle     = {Geometric aspects of functional analysis (1986/87)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1317},
+  pages         = {232--238},
+  publisher     = {Springer, Berlin},
+  year          = {1988},
+  isbn          = {3-540-19353-7},
+  mrclass       = {46B20},
+  mrnumber      = {950984},
+  mrreviewer    = {T.\ Figiel},
+  doi           = {10.1007/BFb0081744},
+  url           = {https://doi.org/10.1007/BFb0081744}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -25924,15 +25924,6 @@
   mrnumber      = {2921690},
   doi           = {10.1016/j.jmaa.2012.04.032},
   url           = {https://doi.org/10.1016/j.jmaa.2012.04.032}
-}
-@misc{chen.montes.ea:24:simulations,
-  author        = {Le Chen and Mauricio Montes and Ian Ruau},
-  title         = {Simulations on Some Surface Growth Models},
-  year          = {2024},
-  howpublished  = {url{https://github.com/chenle02/Simulations\_on\_Some\_Surface\_Growth\_Models}},
-  note          = {Python package available at url{https://pypi.org/project/tetris-ballistic/}},
-  url           = {https://simulations-on-some-surface-growth-models.readthedocs.io},
-  email         = {le.chen\@auburn.edu, mauricio.montes\@auburn.edu, ian.ruau\@auburn.edu}
 }
 @article{chen.morters:09:upper,
   author        = {Chen, Xia and M\"{o}rters, Peter},
@@ -78137,7 +78128,20 @@
   mrnumber      = {1915445},
   mrreviewer    = {Anton Wakolbinger}
 }
-@article{perkins:82:local,
+@incollection{perkins:82:local,
+  author        = {Perkins, Edwin},
+  title         = {Local time and pathwise uniqueness for stochastic differential equations},
+  booktitle     = {Seminar on {P}robability, {XVI}},
+  series        = {Lecture Notes in Math.},
+  volume        = {920},
+  pages         = {201--208},
+  publisher     = {Springer, Berlin-New York},
+  year          = {1982},
+  mrclass       = {60H10},
+  mrnumber      = {658680},
+  mrreviewer    = {Toshio Yamada}
+}
+@article{perkins:82:local*1,
   author        = {Perkins, Edwin},
   title         = {Local time is a semimartingale},
   journal       = {Z. Wahrsch. Verw. Gebiete},
@@ -78152,19 +78156,6 @@
   mrreviewer    = {E. \c{C}inlar},
   doi           = {10.1007/BF01957098},
   url           = {https://doi.org/10.1007/BF01957098}
-}
-@incollection{perkins:82:local*1,
-  author        = {Perkins, Edwin},
-  title         = {Local time and pathwise uniqueness for stochastic differential equations},
-  booktitle     = {Seminar on {P}robability, {XVI}},
-  series        = {Lecture Notes in Math.},
-  volume        = {920},
-  pages         = {201--208},
-  publisher     = {Springer, Berlin-New York},
-  year          = {1982},
-  mrclass       = {60H10},
-  mrnumber      = {658680},
-  mrreviewer    = {Toshio Yamada}
 }
 @article{perrin:09:mouvement,
   title         = {Mouvement brownien et r{\'e}alit{\'e} mol{\'e}culaire},
